# gundo

./: .gitignore  AUTHORS  CHANGES  ChangeLog  DEMO  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
demo/: Makefile  Makefile.am  Makefile.inc  depends.mk  main.c  sketch-window.c  sketch-window.h  sketch.c  sketch.h  stroke.c  stroke.h
doc/: .gitignore  GUNDO_IS_SEQUENCE.html  GUNDO_IS_SEQUENCE_CLASS.html  GUNDO_SEQUENCE.html  GUNDO_SEQUENCE_CLASS.html  GUNDO_TYPE_SEQUENCE.html  General.html  GundoActionCallback.html  GundoActionType.html  GundoSequence.html  GundoSequenceClass.html  HIER.html  Makefile.am  _GundoActionType.html  gundo-docs.sgml  gundo-sections.txt  gundo.types  gundo_make_redo_sensitive.html  gundo_make_undo_sensitive.html  gundo_sequence_abort_group.html  gundo_sequence_add_action.html  gundo_sequence_can_redo.html  gundo_sequence_can_undo.html  gundo_sequence_clear.html  gundo_sequence_end_group.html  gundo_sequence_get_type.html  gundo_sequence_new.html  gundo_sequence_redo.html  gundo_sequence_start_group.html  gundo_sequence_undo.html  index.html  private-classes.xml  tool-items.xml  tree-models.xml
doc/tmpl/: .gitignore  gundo-sequence.sgml  gundo-tool-undo.sgml  gundo-ui.sgml  gundo.sgml
gundo/: .gitignore  Makefile.am  Makefile.inc  gobject-helpers.h  gtk-helpers.c  gtk-helpers.h  gundo-history-view.c  gundo-history-view.h  gundo-history.c  gundo-history.h  gundo-sequence.c  gundo-sequence.h  gundo-tool-undo.c  gundo-tool-undo.h  gundo-ui.c  gundo-ui.h  gundo.c  gundo.h  gundo_ui.c
gundo-ui/: Makefile.am  Makefile.inc  gtk-helpers.h  gundo-popup-model.c  gundo-popup-model.h  gundo-redo-model.c  gundo-redo-model.h  gundo-redo-tool.c  gundo-redo-tool.h  gundo-tool-undo.c  gundo-tool-undo.h  gundo-tool.c  gundo-tool.h  gundo-tree-model-undo.h  gundo-ui.c  gundo-ui.h  gundo-undo-model.c  gundo-undo-model.h  gundo-undo-tool.c  gundo-undo-tool.h
po/: .gitignore  POTFILES.in  de.po
src/: Makefile  Makefile.am  depends.mk  gundo.c  gundo.h  gundo_ui.h  undo.c  undo.h  undo_ui.c  undo_ui.h
test/: .gitignore  Makefile  Makefile.am  Makefile.inc  depends.mk  tundo.c
